--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router": "^3.0.5"
+    "react-router": "^3.0.5",
+    "todomvc-app-css": "^2.1.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.12"
