--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^3.0.5",
-    "todomvc-app-css": "^2.1.0"
+    "todomvc-app-css": "^2.1.0",
+     "classnames": "^2.1.5"
   },
   "devDependencies": {
     "react-scripts": "1.0.12"
