--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.1.5",
+    "fetch-mock": "^5.12.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^3.0.5",
-    "todomvc-app-css": "^2.1.0",
-     "classnames": "^2.1.5"
+    "todomvc-app-css": "^2.1.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.12"
